--- a/Findi/src/main/resources/templates/main.html
+++ b/Findi/src/main/resources/templates/main.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Echo Community</title>
+    <title>핀디</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/nav.css">
 </head>
 
 <body>
-<div th:replace="~{nav}"></div>
+<div th:replace="~{nav::nav}"></div>
     <main>
         <section class="hero">
             <div class="hero-text">
@@ -26,7 +26,7 @@
                 </ul>
             </div>
             <div class="hero-image">
-                <img src="/image/campus.png" alt="핀디 이미지">
+                <img src="/image/people-studying-remotely-e-learning-home-education-distance-learning-online-college.png" alt="핀디 이미지">
             </div>
         </section>
 
