--- a/Findi/src/main/resources/templates/term.html
+++ b/Findi/src/main/resources/templates/term.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Echo Community</title>
+    <title>핀디</title>
     <link rel="stylesheet" href="css/term.css">
     <link rel="stylesheet" href="css/nav.css">
 </head>
@@ -36,7 +36,9 @@
                         </ol>
                     </div>
                 </div>
+                <form action="/member/register" method="get">
                 <button class="confirm-btn">확인</button>
+                </form>
             </div>
         </div>
     </main>
