--- a/Findi/src/main/resources/templates/register.html
+++ b/Findi/src/main/resources/templates/register.html
@@ -3,57 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Echo Community - 회원가입</title>
-    <link rel="stylesheet" href="css/register.css">
-    <link rel="stylesheet" href="css/nav.css">
+    <title>핀디</title>
+    <link rel="stylesheet" href="/css/register.css">
+    <link rel="stylesheet" href="/css/nav.css">
 </head>
 <body>
-<div th:replace="~{nav}"></div>
+<div th:replace="~{nav::nav}"></div>
     <main>
         <div class="register-container">
             <div class="register-content">
-                <form class="register-form">
+                <form th:action="@{/member/register}" th:object="${memberForm}" method="post" class="register-form">
                     <div class="input-group">
                         <label>아이디</label>
-                        <input type="text" required>
+                        <input name="id" type="text" required>
                     </div>
                     <div class="input-group">
                         <label>비밀번호</label>
-                        <input type="password" required>
+                        <input name="password" type="password" required>
                     </div>
                     <div class="input-group">
-                        <label>이름</label>
-                        <input type="text" required>
+                        <label>비밀번호 확인</label>
+                        <input name="password2" type="password" required>
                     </div>
                     <div class="input-group">
                         <label>별명</label>
-                        <input type="text" required>
+                        <input name="username" type="text" required>
                     </div>
                     <div class="input-group">
                         <label>직업</label>
                         <div class="radio-group">
                             <label>
-                                <input type="radio" name="job" value="일반">
-                                일반
+                                <input type="radio" name="job" value="대학생">
+                                대학생
                             </label>
                             <label>
-                                <input type="radio" name="job" value="전문가">
-                                전문가
+                                <input  type="radio" name="job" value="졸업생">
+                                졸업생
                             </label>
                         </div>
-                    </div>
-                    <div class="input-group">
-                        <label>생년월일</label>
-                        <input type="date" required>
-                    </div>
-                    <div class="input-group">
-                        <label>나이대</label>
-                        <input type="text" required>
                     </div>
                     <div class="input-group expert-auth" style="display: none;">  <!-- 전문가 선택시 보이도록 -->
                         <label>인증문서</label>
                         <div class="file-upload">
-                            <input type="file" id="fileInput" accept=".pdf,.doc,.docx,.jpg,.jpeg,.png" required>
+                            <input name="img" type="file" id="fileInput" accept=".pdf,.doc,.docx,.jpg,.jpeg,.png" required>
                             <button type="button" class="upload-btn">첨부</button>
                         </div>
                     </div>
@@ -62,6 +54,6 @@
             </div>
         </div>
     </main>
-    <script src="js/register.js"></script>
+    <script src="/js/register.js"></script>
 </body>
 </html>
