--- a/Findi/src/main/resources/static/css/question_detail.css
+++ b/Findi/src/main/resources/static/css/question_detail.css
@@ -8,7 +8,7 @@ body {
     font-family: Arial, sans-serif;
 }
 
-/*formDetail.html style*/
+/*question_detail.html style*/
 main {
     margin: 0 250px; /* 메인 컨텐츠 좌우 여백 추가 */
 }
