--- a/Findi/src/main/resources/templates/nav.html
+++ b/Findi/src/main/resources/templates/nav.html
@@ -9,7 +9,7 @@
       </form>
 
     <div class="nav-items">
-      <form action="/qa" method="get" style="display: inline;">
+      <form action="/question" method="get" style="display: inline;">
         <button type="submit">고민상담</button>
       </form>
       <form action="/chatbot" method="get" style="display: inline;">
