--- a/Findi/src/main/resources/static/css/question_create.css
+++ b/Findi/src/main/resources/static/css/question_create.css
@@ -8,7 +8,7 @@ body {
     font-family: Arial, sans-serif;
 }
 
-/*form.html style*/
+/*question_create.html style*/
 main {
     margin: 0 250px; /* 메인 컨텐츠 좌우 여백 추가 */
 }
