--- a/Findi/src/main/resources/templates/question_detail.html
+++ b/Findi/src/main/resources/templates/question_detail.html
@@ -13,7 +13,7 @@
         <div class="post-detail">
             <div class="post-container">
                 <div class="post-header">
-                    <h2 class="post-title" th:text="${question.subject}"></h2>
+                    <h1 class="post-title" th:text="${question.subject}"></h1>
                     <div class="post-info">
                         <span class="author" th:text="${question.author.getUsername()}"></span>
                         <span class="date" th:text="${question.createDate}"></span>
@@ -26,7 +26,7 @@
 
                 <!--게시글 작성자 수정 및 삭제 기능 -->
                 <button class="more-btn" onclick="toggleDropdown(this)">⋮</button>
-                <div class="dropdown-menu">
+                <div th:if="${question.author != null and #authentication.getPrincipal().username == question.author.getUsername()}" class="dropdown-menu">
                     <form th:action="@{|/question/modify/${question.id}|}" method="get">
                     <button class="dropdown-item">수정하기</button></form>
                     <form th:action="@{|/question/delete/${question.id}|}" method="get">
@@ -48,7 +48,7 @@
 
                     <!--답변 작성자 수정 및 삭제 기능 -->
                     <button class="more-btn" onclick="toggleDropdown(this)">⋮</button>
-                    <div class="dropdown-menu">
+                    <div th:if="${answer.author != null and #authentication.getPrincipal().username == answer.author.getUsername()}" class="dropdown-menu">
                         <form th:action="@{|/answer/delete/${answer.id}|}" method="get">
                         <button class="dropdown-item delete">삭제하기</button></form>
                     </div>
@@ -58,8 +58,8 @@
 
                 <div class="comment-input">
                     <form class="input-form" th:action="@{|/answer/create/${question.id}|}" method="post">
-                        <input type="text" name="content" placeholder="답변을 입력하세요">
-                        <button class="submit-btn">작성</button>
+                        <input sec:authorize="isAuthenticated()" type="text" name="content" placeholder="답변을 입력하세요">
+                        <button sec:authorize="isAuthenticated()" class="submit-btn">작성</button>
                     </form>
                 </div>
             </div>
