--- a/Findi/src/main/resources/templates/question_modify.html
+++ b/Findi/src/main/resources/templates/question_modify.html
@@ -16,7 +16,7 @@
         <input type="text"
                class="post-title"
                name="subject"
-               th:text="${question.subject}"
+               th:value="${question.subject}"
                required>
       </div>
 
