--- a/Findi/src/main/resources/templates/question_list.html
+++ b/Findi/src/main/resources/templates/question_list.html
@@ -37,16 +37,49 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="question, index : ${questionList}">
-                <td>
-                    <a th:href="@{|/question/detail/${question.id}|}"
-                       th:text="${question.subject}"></a>
+            <tr th:each="question, loop : ${paging}">
+                <td class="text-start"><a
+                        th:href="@{|/question/detail/${question.id}|}"
+                        th:text="${question.subject}"></a>
+
                 </td>
-                <td th:text="${question.createDate}"></td>
-                <td th:text="${question.author.getUsername()}"></td>
+                <td
+                        th:text="${#temporals.format(question.createDate,'yyyy-MM-dd')}">
+                </td>
+                <td th:if="${question.author!=null}"
+                      th:text="${question.author.getUsername()}"></td>
             </tr>
             </tbody>
         </table>
+        <!-- 페이징 처리(이동) 시작 -->
+        <div th:if="${!paging.isEmpty()}">
+            <ul class="pagination justify-content-center">
+                <!-- 이전 페이지 버튼 -->
+                <li class="page-item" th:classappend="${!paging.hasPrevious}?'disabled'">
+                    <a class="page-link" th:href="@{|/question?page=${paging.number - 1}|}">
+                        <span>이전</span>
+                    </a>
+                </li>
+
+                <!-- 페이지 번호 리스트 (현재 페이지를 기준으로 +-5 페이지 표시) -->
+                <li th:each="page : ${#numbers.sequence(0, paging.totalPages - 1)}"
+                    th:if="${page >= paging.number - 5 and page <= paging.number + 5}"
+                    th:classappend="${page == paging.number ? 'active' : ''}" class="page-item">
+                    <a th:text="${page + 1}" class="page-link" th:href="@{|/question?page=${page}|}">
+                        <!-- 페이지 번호 표시 -->
+                    </a>
+                </li>
+
+                <!-- 다음 페이지 버튼 -->
+                <li class="page-item" th:classappend="${!paging.hasNext}?'disabled'">
+                    <a class="page-link" th:href="@{|/question?page=${paging.number + 1}|}">
+                        <span>다음</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!-- 페이징 처리 끝 -->
+
     </main>
 </body>
 </html>
