--- a/Findi/src/main/resources/static/css/register.css
+++ b/Findi/src/main/resources/static/css/register.css
@@ -75,7 +75,7 @@ body {
 .register-submit-btn {
     margin-top: 1rem;
     padding: 1rem;
-    background-color: #3d6aff;
+    background-color: #5c79d6;
     color: white;
     border: none;
     border-radius: 6px;
