--- a/Findi/src/main/resources/templates/nav.html
+++ b/Findi/src/main/resources/templates/nav.html
@@ -4,7 +4,7 @@
 
       <form action="/home" method="get">
         <button type="submit" class="logo" style="background: none; border: none;">
-          <img src="/image/logo.png" alt="Echo Logo">
+          <h1 class="logo-text">Findi</h1>
         </button>
       </form>
 
