--- a/Findi/src/main/resources/templates/register.html
+++ b/Findi/src/main/resources/templates/register.html
@@ -14,6 +14,10 @@
             <div class="register-content">
                 <form th:action="@{/member/register}" th:object="${memberForm}" method="post" class="register-form">
                     <div class="input-group">
+                        <label>이메일</label>
+                        <input name="email" type="text" required>
+                    </div>
+                    <div class="input-group">
                         <label>아이디</label>
                         <input name="id" type="text" required>
                     </div>
