[수정] css 경로수정 #17

--- a/Findi/src/main/resources/templates/roommate.html
+++ b/Findi/src/main/resources/templates/roommate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>룸메이트 매칭</title>
-    <link rel="stylesheet" href="../styles/roommate.css" />
+    <link rel="stylesheet" href="../resources/static/css/roommate.css" />
 </head>
 <body>
 <div class="container">
