member 이메일 추가

--- a/Findi/src/main/resources/static/css/register.css
+++ b/Findi/src/main/resources/static/css/register.css
@@ -45,6 +45,7 @@ body {
 
 .input-group input[type="text"],
 .input-group input[type="password"],
+.input-group input[type="email"],
 .input-group input[type="date"] {
     padding: 0.8rem 1rem;
     border: none;
