--- a/Findi/src/main/resources/templates/register.html
+++ b/Findi/src/main/resources/templates/register.html
@@ -30,6 +30,10 @@
                         <input name="username" type="text" required>
                     </div>
                     <div class="input-group">
+                        <label>이메일</label>
+                        <input name="email" type="email" required>
+                    </div>
+                    <div class="input-group">
                         <label>직업</label>
                         <div class="radio-group">
                             <label>
