--- a/Findi/src/main/resources/static/css/chat.css
+++ b/Findi/src/main/resources/static/css/chat.css
@@ -1,16 +1,19 @@
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
-    background: #eaf3fb; /* 연한 하늘색 배경 */
+    background: #eaf3fb;
+    height: 100vh; /* 화면 전체 높이 */
+    overflow: hidden; /* 바디 전체에서 스크롤 막기 */
 }
 
 .chat-container {
     display: flex;
-    height: 100vh;
+    height: 95vh;
+    overflow: hidden;
 }
 
 .sidebar {
-    width: 250px;
+    width: 400px;
     background: #ffffff;
     border-right: 1px solid #c6d8ea; /* 파랑계열 보더 */
     display: flex;
@@ -71,6 +74,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+    min-height: 0;
 }
 
 .chat-header {
@@ -95,7 +99,7 @@ body {
     color: #007acc;
 }
 
-.chat-box {
+.chat-box,  #chat-box{
     flex: 1;
     padding: 20px;
     overflow-y: auto;
@@ -150,4 +154,15 @@ body {
     border-radius: 50%;
     cursor: pointer;
     font-size: 16px;
+}
+
+.sidebar a {
+    text-decoration: none;
+    color: inherit;
+    display: block; /* 전체를 클릭 가능하도록 */
+}
+
+
+.chat-item a {
+    display: block;
 }
