--- a/Findi/src/main/resources/templates/nav.html
+++ b/Findi/src/main/resources/templates/nav.html
@@ -21,6 +21,9 @@
       <form action="/calendar" method="get" style="display: inline;">
         <button type="submit">학사일정 알리미</button>
       </form>
+      <form action="/chat/room/0" method="get" style="display: inline;">
+        <button type="submit">대학 채팅방</button>
+      </form>
     </div>
     <div class="search-login">
       <input type="search" placeholder="검색">
