--- a/Findi/src/main/resources/templates/chatbot.html
+++ b/Findi/src/main/resources/templates/chatbot.html
@@ -21,6 +21,6 @@
     </div>
 
 </div>
-<script type="module" src="/js/chatmain.js"></script>
+<script type="module" src="/js/chatbot.js"></script>
 </body>
 </html>
