--- a/Findi/src/main/resources/templates/question_list.html
+++ b/Findi/src/main/resources/templates/question_list.html
@@ -19,12 +19,12 @@
         </section>
 
         <div class="search-section">
-            <div class="search-box">
-                <input type="text" placeholder="검색">
+            <form class="search-box" method="get" action="/question">
+                <input type="text" name="kw" placeholder="검색어를 입력하세요" />
                 <button type="submit" class="search-btn">검색</button>
-                <button sec:authorize="isAuthenticated()" class="write-btn"
+                <button sec:authorize="isAuthenticated()" type="button" class="write-btn"
                         onclick="location.href='/question/create'">등록하기</button>
-            </div>
+            </form>
         </div>
 
         <!--게시판 리스트 제작 필요 (데이터베이스 연동 필요)-->
