--- a/Findi/src/main/resources/templates/question_list.html
+++ b/Findi/src/main/resources/templates/question_list.html
@@ -55,8 +55,8 @@
         <div th:if="${!paging.isEmpty()}">
             <ul class="pagination justify-content-center">
                 <!-- 이전 페이지 버튼 -->
-                <li class="page-item" th:classappend="${!paging.hasPrevious}?'disabled'">
-                    <a class="page-link" th:href="@{|/question?page=${paging.number - 1}|}">
+                <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled' : ''">
+                    <a class="page-link" th:href="@{|/question?page=${paging.number - 1}&kw=${kw}|}">
                         <span>이전</span>
                     </a>
                 </li>
@@ -65,20 +65,19 @@
                 <li th:each="page : ${#numbers.sequence(0, paging.totalPages - 1)}"
                     th:if="${page >= paging.number - 5 and page <= paging.number + 5}"
                     th:classappend="${page == paging.number ? 'active' : ''}" class="page-item">
-                    <a th:text="${page + 1}" class="page-link" th:href="@{|/question?page=${page}|}">
-                        <!-- 페이지 번호 표시 -->
-                    </a>
+                    <a th:text="${page + 1}" class="page-link" th:href="@{|/question?page=${page}&kw=${kw}|}"></a>
                 </li>
 
                 <!-- 다음 페이지 버튼 -->
-                <li class="page-item" th:classappend="${!paging.hasNext}?'disabled'">
-                    <a class="page-link" th:href="@{|/question?page=${paging.number + 1}|}">
+                <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled' : ''">
+                    <a class="page-link" th:href="@{|/question?page=${paging.number + 1}&kw=${kw}|}">
                         <span>다음</span>
                     </a>
                 </li>
             </ul>
         </div>
         <!-- 페이징 처리 끝 -->
+
 
     </main>
 </body>
